# license_gen

./: Cargo.toml  id_license  id_license.pub
license/: license.lic  test_license.lic
src/: encrypt.rs  main.rs
