[package]
name = "license_basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.21"
clap = { version = "4.4.10", features = ["derive"] }
ed25519-dalek = { version = "2.1.0", features = ["serde", "pkcs8", "signature", "rand_core"] }
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.9"
